--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,9 @@
 cmake_minimum_required (VERSION 3.0)
 
-project (mulle-regex)
+project( mulle-regex C)
 
-set( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/mulle-configuration)
+
+set( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/mulle-configuration/cmake)
 message(STATUS "CMAKE_MODULE_PATH is ${CMAKE_MODULE_PATH}")
 message(STATUS "CMAKE_BUILD_TYPE is ${CMAKE_BUILD_TYPE}")
 if( "${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
@@ -11,36 +12,33 @@ else()
   include( Release)
 endif()
 
-# using include_directories is a little bit shitty
-include_directories( src
+
+include( CMakeSourcesAndHeaders.txt)
+
+
+set( DEPENDENCY_LIBRARIES
+${MULLE_ALLOCATOR_LIBRARY}
+${MULLE_BUFFER_LIBRARY}
+${MULLE_TEST_ALLOCATOR_LIBRARY}
+${MULLE_THREAD_LIBRARY}
+${MULLE_UTF_LIBRARY}
 )
 
-set( HEADERS
-src/mulle_regex.h
-src/mulle_utf32regex.h
-src/mulle_utf32regex+private.h
-)
 
 add_library( mulle_regex
-src/mulle_utf32regex.c
-src/mulle_utf32regex_substitute.c
+${SOURCES}
 )
 
-add_library( mulle_regex_standalone SHARED
-src/mulle_regex_standalone.c
+
+set( TARGET_ALL_LOAD_LIBRARIES
+$<TARGET_FILE:mulle_sprintf>
+${DEPENDENCY_LIBRARIES}
 )
 
-add_dependencies( mulle_regex_standalone mulle_regex)
+set( STANDALONE_BASE_NAME "mulle_regex")
+set( STANDALONE_NAME "mulle_regex_standalone")
 
-TARGET_LINK_LIBRARIES( mulle_regex_standalone
-${BEGIN_ALL_LOAD}
-mulle_regex
-mulle_utf
-mulle_allocator
-mulle_test_allocator
-${END_ALL_LOAD}
-)
-
+include( Standalone)
 
 INSTALL( TARGETS mulle_regex_standalone mulle_regex DESTINATION "lib")
 INSTALL( FILES ${HEADERS} DESTINATION "include/mulle_regex")
