--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,8 @@ set( MULLE_REGEX_LIBRARY ON)
 include( CMakeSourcesAndHeaders.txt)
 include( CMakeDependencies.txt)
 
+include_directories( ${INCLUDE_DIRS})
+
 
 set( DEPENDENCY_LIBRARIES
 ${MULLE_ALLOCATOR_LIBRARY}
