--- a/.mulle/etc/sourcetree/config
+++ b/.mulle/etc/sourcetree/config
@@ -1,1 +1,1 @@
-mulle-utf;tar;no-all-load,no-import,no-singlephase,no-singlephase-link;dad5de01-c0a0-4c21-bac0-784a641048b6;${MULLE_UTF_URL:-https://github.com/mulle-c/mulle-utf/archive/${MULLE_UTF_BRANCH:-latest}.tar.gz};;;;
+mulle-utf;tar;no-all-load,no-import,no-singlephase;3d57f486-a89e-4913-ba92-c917b36bfa3e;${MULLE_UTF_URL:-https://github.com/mulle-c/mulle-utf/archive/${MULLE_UTF_BRANCH:-latest}.tar.gz};;;;
