--- a/test/.mulle/etc/sourcetree/config
+++ b/test/.mulle/etc/sourcetree/config
@@ -1,2 +1,2 @@
-mulle-regex;tar;no-all-load,no-import;C2FB05CA-0F9A-44EE-930C-0FFB6F970B86;${MULLE_REGEX_URL:-https://github.com/mulle-c/mulle-regex/archive/${MULLE_REGEX_BRANCH:-latest}.tar.gz};;;;
-mulle-testallocator;tar;no-all-load,no-import,no-singlephase;E1D6D269-697F-4924-AFEE-DB740521DAA6;${MULLE_TESTALLOCATOR_URL:-https://github.com/mulle-core/mulle-testallocator/archive/${MULLE_TESTALLOCATOR_BRANCH:-latest}.tar.gz};;;;
+mulle-testallocator;${MULLE_TESTALLOCATOR_NODETYPE:-tar};no-import,no-singlephase;E1D6D269-697F-4924-AFEE-DB740521DAA6;${MULLE_TESTALLOCATOR_URL:-https://github.com/mulle-core/mulle-testallocator/archive/${MULLE_BRANCH}.tar.gz};${MULLE_TESTALLOCATOR_BRANCH:-latest};;;
+mulle-regex;${MULLE_REGEX_NODETYPE:-tar};no-all-load,no-import,no-singlephase;C2FB05CA-0F9A-44EE-930C-0FFB6F970B86;${MULLE_REGEX_URL:-https://github.com/mulle-c/mulle-regex/archive/${MULLE_BRANCH}.tar.gz};${MULLE_REGEX_BRANCH:-latest};;;
