--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required( VERSION 3.1)
 
 project( mulle-regex C)
+add_definitions( -DMULLE_REGEX_EXTERN_GLOBAL=extern)
+
 
 
 ### mulle-sde environment
