--- a/cola/properties.plist
+++ b/cola/properties.plist
@@ -7,7 +7,7 @@
       user="mulle-c";
       repo="mulle-regex";
       homepage="https://github.com/mulle-c/mulle-regex";
-      license="Public Domain"
+      license="Custom"
    };
    dependencies =
    (
